<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/textVBillLabel"
            android:id="@+id/textVBillLabel" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/textVTipLabel"
            android:id="@+id/textVTipLabel" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/textVTotalLabel"
            android:id="@+id/textVTotalLabel" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2">

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/etBillAmount" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/textVTip"
            android:id="@+id/tvTip" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textVTotal"
            android:id="@+id/tvTotal" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textVTipBar"
            android:id="@+id/textView23"
            android:layout_gravity="center_horizontal" />

        <SeekBar
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBarTipBar"
            android:max="50"
            android:progress="15"
            android:indeterminate="false" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:id="@+id/tvAvailability"
            android:text="@string/textVAvailability" />

        <TextView
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:text="@string/textVIntroduction"
            android:id="@+id/tvIntroduction"
            android:gravity="center_horizontal" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroup">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/radioBGood"
                android:id="@+id/radioButtonGood"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/radioBOK"
                android:id="@+id/radioButtonOK"
                android:checked="true" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/radioBBad"
                android:id="@+id/radioButtonBad"
                android:checked="false" />
        </RadioGroup>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:text="@string/checkBFriendly"
            android:id="@+id/checkBoxFriendly"
            android:layout_gravity="end"
            android:checked="false" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:layout_below="@+id/checkBoxFriendly"
            android:text="@string/checkBSpecials"
            android:id="@+id/checkBoxSpecials"
            android:layout_gravity="end"
            android:checked="false" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:layout_below="@+id/checkBoxSpecials"
            android:text="@string/checkBOpinion"
            android:id="@+id/checkBoxOpinion"
            android:layout_gravity="end"
            android:checked="false" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textVProblemSolving"
            android:id="@+id/tvProbSolvSkills" />

        <Spinner
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:id="@+id/spProbSolv" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textVTimeSpentWaiting"
            android:id="@+id/tvTimeWaited"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp" />

        <Chronometer
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cmTimeElapsed"
            android:textSize="40sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/cmText"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5">
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Start"
        android:id="@+id/StartTimer"
        android:onClick="StartTime" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="Pause"
            android:id="@+id/PauseTimer"
            android:onClick="PauseTime"/>

        <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Reset"
        android:id="@+id/ResetTimer"
        android:onClick="ResetTime"/>

    </LinearLayout>

</LinearLayout>